MockService Unit Tests
Refactoring of OnRequest and RespondWith methods to simplify usage

--- a/Microsoft.Owin.MockService/Microsoft.Owin.MockService.csproj
+++ b/Microsoft.Owin.MockService/Microsoft.Owin.MockService.csproj
@@ -99,7 +99,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Middleware\LoggingMiddleware.cs" />
     <Compile Include="MockService.cs" />
-    <Compile Include="ResponseBuilder.cs" />
+    <Compile Include="Fluent\ResponseBuilder.cs" />
     <Compile Include="SelfHost\MockStartup.cs" />
     <Compile Include="Agents\PortAgent.cs" />
     <Compile Include="Repositories\MockServiceRepository.cs" />
