--- a/Microsoft.Owin.MockService.Tests/Microsoft.Owin.MockService.Tests.csproj
+++ b/Microsoft.Owin.MockService.Tests/Microsoft.Owin.MockService.Tests.csproj
@@ -20,7 +20,7 @@
     <TestProjectType>UnitTest</TestProjectType>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
-    <NuGetPackageImportStamp>4dcee3a5</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>0015935f</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,7 +46,14 @@
     <Reference Include="FluentAssertions.Core">
       <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Owin">
+      <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="xunit.abstractions">
@@ -72,7 +79,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="PortRepositorySpecs.cs" />
+    <Compile Include="%28Its.Recipes%29\TestInputGenerator.cs" />
+    <Compile Include="UnitTests\MockServiceRepositorySpecs.cs" />
+    <Compile Include="UnitTests\MockServiceSpecs.cs" />
+    <Compile Include="UnitTests\PortAgentSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
