--- a/Microsoft.Owin.MockService/Microsoft.Owin.MockService.csproj
+++ b/Microsoft.Owin.MockService/Microsoft.Owin.MockService.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <RestorePackages>true</RestorePackages>
     <BuildPackage>true</BuildPackage>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
