--- a/Microsoft.Owin.MockService.Tests/packages.config
+++ b/Microsoft.Owin.MockService.Tests/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="3.3.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
-  <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="xunit" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="3.3.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Owin" version="1.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net45" userInstalled="true" />
 </packages>
