--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,19 @@
-version: 1.0.{build}
+version: '1.0.{build}'
+configuration:
+- Debug
+- Release
+platform: Any CPU
+init:
+- ps: $Env:LABEL = "-CI-" + $Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
 before_build:
-- nuget restore
-build:
-  verbosity: minimal
+- appveyor-retry dotnet restore -v Minimal
+build_script:
+- dotnet build "src\Microsoft.Kestrel.MockService\Microsoft.Kestrel.MockService.csproj" -c %CONFIGURATION% --version-suffix %LABEL%
+after_build:
+- dotnet pack "src\Microsoft.Kestrel.MockService\Microsoft.Kestrel.MockService.csproj" -c %CONFIGURATION% --no-build --version-suffix %LABEL% -o artifacts
+test_script:
+- dotnet test "test\Microsoft.Kestrel.MockService.Tests\Microsoft.Kestrel.MockService.Tests.csproj" -c %CONFIGURATION%
+artifacts:
+- path: artifacts\**\*.*
+cache:
+- '%USERPROFILE%\.nuget\packages'
